--- a/cms/apps/core/partials/footer.ejs
+++ b/cms/apps/core/partials/footer.ejs
@@ -2,14 +2,17 @@
 <footer class="sq-footer sq-footer--dark fdb-block footer-large bg-dark">
   <div class="container sq-footer__container">
     <div class="row align-items-top text-left text-md-left">
-      <% for(var i=0; i < siteMap.children.length; i++) { 
+      <% for(var i=0; i < siteMap ? siteMap.children.length : 0; i++) { 
         var currentNode = siteMap.children[i];
         %>
       <div class="col-12 col-sm-6 col-md-3 sq-footer__block">
         <h3 class="sq-footer__block-label"><strong><%=currentNode.title%></strong></h3>
-        <% for(var j=0; j < currentNode.children.length; j++) {  %>
+        <%
+        if (currentNode) {
+        for(var j=0; j < currentNode.children.length; j++) {  %>
         <div><a href="<%=currentNode.children[j].href%>"><%=currentNode.children[j].title%></a></div>
-        <% } %>
+        <% }
+         } %>
       </div>
       <% } %>
 
