--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -64,4 +64,28 @@
   &__no-data {
     padding: 20px 0;
   }
+
+  &--default {
+    .sq-grid-cmp__header-row {
+      background-color: $sq-color-gray-lightest;
+    }
+    .sq-grid-cmp__header-row-cell {
+      flex-basis: 250px;
+      justify-content: flex-start;
+      flex-grow: 0;
+      &:last-child {
+        flex-basis: auto;
+        flex-grow: 1;
+      }
+    }
+    .sq-grid-cmp__data-cell {
+      flex-grow: 0;
+      flex-basis: 250px;
+      justify-content: flex-start;
+      &:last-child {
+        flex-basis: auto;
+        flex-grow: 1;
+      }
+    }
+  }
 }
