--- a/web/styles/abstract/_variables.scss
+++ b/web/styles/abstract/_variables.scss
@@ -72,7 +72,7 @@ $sq-color-info: #066aa5;
 $sq-color-info-darker: #066aa563;
 $sq-color-warning: #ffa000;
 $sq-color-warning-darker: #ffa0007a;
-$sq-color-error: $sq-color-secondary-dark;
+$sq-color-error: #d32f2f;
 $sq-color-error-darker: #7b4851;
 $sq-color-error-light: $sq-color-secondary-light;
 $sq-color-success: #4caf50;
@@ -84,7 +84,7 @@ $brand-primary: $sq-color-primary ; // #337ab7
 $brand-success:$sq-color-success ;
 $brand-info: $sq-color-info ;
 $brand-warning: $sq-color-warning ;
-$brand-danger: $sq-color-error ;
+$brand-danger: $sq-color-secondary ;
 
 //== Scaffolding
 //
