--- a/web/containers/Content/_content.scss
+++ b/web/containers/Content/_content.scss
@@ -16,7 +16,7 @@
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
-    .dynamic-content__body {
+    .sq-content-page__body-wrapper, .dynamic-content__body {
       flex-grow: 1;
     }
     
