--- a/stories/styles.scss
+++ b/stories/styles.scss
@@ -10,3 +10,8 @@
   color: $sq-color-success;
 
 }
+.col-icon {
+  flex-basis: 40px !important;
+  flex-grow: 0!important;
+  flex-shrink: 0!important;
+}
