--- a/web/components/Icon/icon.scss
+++ b/web/components/Icon/icon.scss
@@ -112,6 +112,9 @@
   &--default {
     color: $sq-color-muted;
   }
+  &--muted-light {
+    color: $sq-color-muted-light;
+  }
   &--invert {
     color: $sq-color-white;
   }
