--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -38,6 +38,21 @@
       line-height: 36px;
       font-weight: bold;
       font-size: 14px;
+      overflow: hidden;
+      &-text {
+        width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+      &.sort-enable {
+          border-right: solid 2px transparent;
+          transition: all ease 300ms;
+        &:hover {
+          background-color: #edf4f6;
+          border-right: solid 2px $sq-color-primary;
+          
+       }
+      }
     }
   }
  
@@ -45,11 +60,9 @@
     &-cell {
       padding: 10px;
       @media (min-width: $screen-sm) {
-        padding: 0px 20px;
+        padding: 5px 20px;
         min-height: 36px;
       }
-    }
-    &-row {
     }
   }
   &--striped {
@@ -101,7 +114,6 @@
 
   &--fixed {
     height: 100%;
-    overflow: auto;
     display: flex;
     flex-direction: column;
     .sq-grid__header {
