--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -30,14 +30,19 @@
     }
   }
   &__header-row {
+    color: #333;
+    border-top: solid 1px $sq-color-muted-lighter;
+    border-bottom: solid 1px $sq-color-muted-lighter;
+    height: 100%;
     &-cell {
       padding: 5px 10px;
       @media (min-width: $screen-sm) {
-        padding: 10px 20px;
+        padding: 10px 10px;
       }
       line-height: 36px;
       font-weight: bold;
-      font-size: 14px;
+      font-size: 10px;
+      text-transform: uppercase;
       overflow: hidden;
       &-text {
         width: 100%;
@@ -49,7 +54,7 @@
           transition: all ease 300ms;
         &:hover {
           background-color: #edf4f6;
-          border-right: solid 2px $sq-color-primary;
+          border-right: solid 2px $sq-color-primary-lighter;
           
        }
       }
@@ -60,7 +65,7 @@
     &-cell {
       padding: 10px;
       @media (min-width: $screen-sm) {
-        padding: 5px 20px;
+        padding: 5px 10px;
         min-height: 36px;
       }
     }
