--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -31,8 +31,8 @@
   }
   &__header-row {
     color: #333;
-    border-top: solid 1px $sq-color-muted-lighter;
-    border-bottom: solid 1px $sq-color-muted-lighter;
+    border-top: solid 1px $sq-color-muted-light;
+    border-bottom: solid 1px $sq-color-muted-light;
     height: 100%;
     &-cell {
       padding: 5px 10px;
