Fixed fonts styles

--- a/web/styles/_base.scss
+++ b/web/styles/_base.scss
@@ -3,7 +3,7 @@ html {
 }
 body {
   font-family: $paragraph-font-family;
-  font-size: $t5-font-size;
+  font-size: $base-font-size;
   color: $sq-text-color;
   background-color: $body-bg;
   line-height: normal;
