--- a/web/styles/_helpers.scss
+++ b/web/styles/_helpers.scss
@@ -4,7 +4,9 @@ $sides: (
   t: 'top',
   b: 'bottom',
 );
-
+.m-none {
+  margin: 0;
+}
 @each $initial, $side in $sides {
   .m#{$initial}-narrow {
     margin-#{$side}: 10px;
@@ -25,6 +27,10 @@ $sides: (
   .m#{$initial}-jumbo {
     margin-#{$side}: 60px;
   }
+}
+
+.p-none {
+  padding: 0;
 }
 
 @each $initial, $side in $sides {
