--- a/web/components/Actions/actions.scss
+++ b/web/components/Actions/actions.scss
@@ -11,7 +11,12 @@
       padding-left: 0;
       margin-left: 0px;
     }
+    &.Button {
+      border-left: none;
+      padding-left: 4px;
+    }
   }
+  
   &--flex {
     display: flex;
     .sq-actions__action {
