--- a/web/containers/TocIndex/_toc-index.scss
+++ b/web/containers/TocIndex/_toc-index.scss
@@ -2,7 +2,7 @@
   padding: 40px 0;
 
   &__header {
-    border-left: 5px solid $sq-color-info;
+    border-left: 5px solid $sq-color-primary;
     padding-left: 10px;
   }
   &__container {
