Fixed sort styles

--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -103,6 +103,7 @@
       .sq-grid__header-row-cell.sort-enable {
         .sq-grid__header-row-cell-wrapper {
           padding-right: 24px;
+          height: 100%;
         }
         position: relative;
         cursor: pointer;
