--- a/web/components/ui/TagLabel/_tag-label.scss
+++ b/web/components/ui/TagLabel/_tag-label.scss
@@ -1,7 +1,7 @@
 .sq-tag-label {
   padding: 8px;
+  border-radius: 4px;
   &__container {
-    padding: 4px 6px;
     display: flex;
     align-items: center;
   }
@@ -28,9 +28,6 @@
   }
  
   &--small {
-    .sq-tag-label__container {
-      padding: 2px 4px;
-    }
     .sq-icon {
       width: 12px;
       height: 12px;
