--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -152,7 +152,29 @@
       }
     }
   }
-
+  &__root {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+  }
+  &__center {
+    height: 100%;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    width: 100%;
+    overflow: hidden;
+  }
+  &__left-fixed {
+    height: 100%;
+    display: flex;
+    flex-shrink: 0;
+    flex-grow: 0;
+    flex-direction: column;
+    .sq-grid__body {
+      overflow: hidden !important;
+    }
+  }
   &--fixed {
     height: 100%;
     display: flex;
