--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -171,13 +171,17 @@
     &.has-scrolled {
       box-shadow: 4px -5px 14px -2px rgb(229 229 229 / 50%);
     }
+   
     height: 100%;
     display: flex;
     flex-shrink: 0;
     flex-grow: 0;
     flex-direction: column;
     .sq-grid__body {
-      overflow: hidden !important;
+      &::-webkit-scrollbar {
+        width: 0px;
+        background: transparent;
+      }
     }
   }
   &--fixed {
