--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -47,6 +47,8 @@
       &-wrapper {
         width: 100%;
         padding: 5px 10px;
+        display: flex;
+        align-items: center;
         @media (min-width: $screen-sm) {
           padding: 10px 20px;
         }
