--- a/web/components/ui/GlobalNavigation/_global-navigation.scss
+++ b/web/components/ui/GlobalNavigation/_global-navigation.scss
@@ -64,6 +64,7 @@ $sq-global-navigation-sub-navbg: $white;
     img {
       width: 170px;
     }
+    margin-bottom: 10px;
     margin-right: 20px;
     flex-grow: 1;
     width: 170px;
