--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -32,16 +32,16 @@
       justify-content: left;
     }
   }
-  .sq-grid__center {
-    .sq-grid__header-row,
-    .sq-grid__data {
-      &-cell {
-        &:first-child {
-          flex-grow: 1 !important;
-        }
-      }
-    }
-  }
+  // .sq-grid__center {
+  //   .sq-grid__header-row,
+  //   .sq-grid__data {
+  //     &-cell {
+  //       &:first-child {
+  //         flex-grow: 1 !important;
+  //       }
+  //     }
+  //   }
+  // }
   &__header-row {
     color: #333;
     height: 100%;
