--- a/web/components/ui/SelectField/select-field.scss
+++ b/web/components/ui/SelectField/select-field.scss
@@ -4,7 +4,9 @@
       min-width: 150px;
     }
   }
- 
+  &__pop-over {
+    z-index: $z-index-level-topest !important;
+  }
   .sq-icon {
     margin-right: 4px;
   }
