--- a/web/styles/abstract/_variables.scss
+++ b/web/styles/abstract/_variables.scss
@@ -174,7 +174,14 @@ $z-index-level-1: 1001;
 $z-index-level-2: 1002;
 $z-index-level-3: 1003;
 $z-index-level-4: 1004;
+$z-index-level-mid-1: 1301;
+$z-index-level-mid-2: 1302;
+$z-index-level-mid-3: 1303;
+$z-index-level-mid-4: 1304;
+$z-index-level-3rdtop: 9994;
+$z-index-level-2ndtop: 9995;
 $z-index-level-top: 9996;
+$z-index-level-3rdtopest: 9997;
 $z-index-level-2ndtopest: 9998;
 $z-index-level-topest: 9999;
 
