--- a/web/components/ui/TagDropdown/_tag-dropdown.scss
+++ b/web/components/ui/TagDropdown/_tag-dropdown.scss
@@ -12,6 +12,9 @@
     .MuiMenuItem-root.sq-tag-label--list-item-wrap {
       padding: 4px 8px;
     }
+    .sq-tag-label--list-item {
+      width: 100%;
+    }
   }
   &__icon {
     &.active {
@@ -19,13 +22,7 @@
       color: white;
     }
   }
-  &--list-item {
-    min-width: 134px;
-    padding: 4px;
-    .sq-tag-label__container {
-      justify-content: center;
-    }
-  }
+ 
 }
 
 .sq-tag-label {
