--- a/web/components/Actions/actions.scss
+++ b/web/components/Actions/actions.scss
@@ -2,9 +2,7 @@
   width: 100%;
   text-align: right;
   &__action {
-    margin-left: 10px;
     display: inline-block;
-    border-left: solid 2px $sq-color-gray-light;
     padding-left: 8px;
     &:first-child {
       border-left: none;
@@ -21,6 +19,7 @@
     .sq-actions__action {
       margin-left: 0;
       margin-bottom: 8px;
+      text-align: center;
     }
   }
   
