--- a/web/components/EditableField/_editable-field.scss
+++ b/web/components/EditableField/_editable-field.scss
@@ -1,6 +1,6 @@
 .sq-editable-field {
   width: 100%;
-  padding-right: 20px;
+  padding-right: 32px;
   height: 100%;
   display: flex;
   align-items: center;
@@ -21,7 +21,7 @@
     position: absolute;
     display: none;
     top: 0;
-    right: 0;
+    right: 4px;
     bottom: 0;
     margin: auto;
     height: 32px;
