--- a/web/components/Form/form.scss
+++ b/web/components/Form/form.scss
@@ -49,7 +49,7 @@
       @media (min-width:$screen-sm) {
         flex-basis: 33.3%;
         padding-right: 20px;
-        &:nth-child(3) {
+        &:nth-child(3n) {
           padding-right: 0;
         }
       }
