--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -27,6 +27,7 @@
   &__data {
     &-cell {
       flex-basis: 250px;
+      min-width: 250px;
       display: flex;
       align-items: center;
       justify-content: left;
@@ -149,6 +150,7 @@
   .sq-grid__header-row-cell {
     background-color: $sq-color-gray-lightest;
     flex-basis: 250px;
+    min-width: 250px;
     justify-content: flex-start;
     flex-grow: 0;
     flex-shrink: 0;
@@ -158,6 +160,7 @@
     flex-shrink: 0;
     overflow: hidden;
     flex-basis: 250px;
+    min-width: 250px;
     justify-content: flex-start;
   }
   &__col-filters {
