--- a/web/styles/abstract/_variables.scss
+++ b/web/styles/abstract/_variables.scss
@@ -102,7 +102,7 @@ $sq-color-error-darker: darken($sq-color-error, 5%);
 $sq-color-error-darkest: darken($sq-color-error, 10%);
 
 $sq-color-success: #308833;
-$sq-color-success-lightest: lighten($sq-color-success, 45%);
+$sq-color-success-lightest: #e9f3ec;
 $sq-color-success-lighter: lighten($sq-color-success, 35%);
 $sq-color-success-light: lighten($sq-color-success, 25%);
 $sq-color-success-medium: lighten($sq-color-success, 13%);
