--- a/web/components/ImageWithSpotlight/_image-with-spotlight.scss
+++ b/web/components/ImageWithSpotlight/_image-with-spotlight.scss
@@ -51,19 +51,21 @@
     background-color: $sq-color-gray-lightest;
     padding: 20px;
     cursor: pointer;
-    border-radius: 5px;
-    max-width: 250px;
+    border-radius: 15px;
+    max-width: 90%;
     width: 100%;
     
     display: flex;
     flex-direction: column;
     justify-content: center;
-    box-shadow: #f6f7f8 10px 10px 25px;
+    box-shadow: 0px 12px 32px rgba(0, 0, 0, 0.08);
     @media (min-width: $screen-sm) {
       flex-basis: 50%;
+      max-width: 47%;
     }
     @media (min-width: $screen-md) {
-      flex-basis: 25%;
+      flex-basis: 50%;
+      max-width: 250px;
     }
     &-icon {
       width: 64px;
