Fixed grid order

--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -43,6 +43,9 @@
   //     }
   //   }
   // }
+  &__loading-data {
+    padding-top: 20px;
+  }
   &__header-row {
     color: #333;
     height: 100%;
