--- a/web/components/ui/Pagination/_pagination.scss
+++ b/web/components/ui/Pagination/_pagination.scss
@@ -1,3 +1,7 @@
 .sq-pagination {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  &__page-size {
+    min-width: 100px;
+  }
 }
