--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -85,7 +85,7 @@
           border-right: solid 2px transparent;
           transition: all ease 300ms;
         }
-        &.hover {
+        &:hover {
           .sq-grid__header-row-cell-wrapper {
             background-color: #edf4f6;
             border-right: solid 2px $sq-color-primary-lighter;
