--- a/web/containers/TocIndex/_toc-index.scss
+++ b/web/containers/TocIndex/_toc-index.scss
@@ -6,7 +6,13 @@
     padding-left: 10px;
   }
   &__container {
-    column-count: 3;
+    column-count: 1;
+    @media (min-width: $screen-sm) {
+      column-count: 2;
+    }
+    @media (min-width: $screen-md) {
+      column-count: 3;
+    }
     > div {
       -webkit-column-break-inside: avoid;
       page-break-inside: avoid;
