--- a/web/containers/PageBuilder/Panel/_panel.scss
+++ b/web/containers/PageBuilder/Panel/_panel.scss
@@ -2,6 +2,7 @@
   border-radius: 5px;
   position: relative;
   min-width: 250px;
+  height: 100%;
   &__header {
     padding: 15px;
   }
@@ -12,6 +13,7 @@
   }
   &__body {
     padding: 15px;
+    overflow: auto;
   }
   &--default {
     border: 1px solid $sq-color-slate-lightest;
