--- a/web/containers/PageBuilder/Panel/_panel.scss
+++ b/web/containers/PageBuilder/Panel/_panel.scss
@@ -6,6 +6,11 @@
   &__header {
     padding: 15px;
   }
+  &__container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
   &__close{ 
     position: absolute;
     top: 8px;
@@ -14,6 +19,7 @@
   &__body {
     padding: 15px;
     overflow: auto;
+    flex-grow: 1;
   }
   &--default {
     border: 1px solid $sq-color-slate-lightest;
