--- a/web/containers/PageBuilder/_page-builder.scss
+++ b/web/containers/PageBuilder/_page-builder.scss
@@ -45,7 +45,7 @@
     height: 100%;
     gap: 16px;
     padding-left: 60px;
-    padding-right: 60px;
+    padding-right: 0;
 
     min-height: 300px;
   }
