--- a/web/containers/Content/_content.scss
+++ b/web/containers/Content/_content.scss
@@ -1,6 +1,6 @@
 .sq-content-page {
   width: 100%;
-  margin: auto;
+  margin: 0 auto;
 
   &__body, .sq-global-navigation__wrapper {
     max-width: $screen-lg;
