Fixed icon list

--- a/web/containers/PageBuilder/_component-editor.scss
+++ b/web/containers/PageBuilder/_component-editor.scss
@@ -37,11 +37,16 @@
   &__name {
     background-color: $white;
     top: -8px;
+    color: $sq-color-slate-light;
     position: absolute;
     border-radius: 5px;
     padding: 2px 8px;
     left: 0;
     display: none;
+    text-overflow: ellipsis;
+    max-width: 300px;
+    white-space: nowrap;
+    overflow: hidden;
   }
   &__move {
     position: absolute;
