--- a/web/styles/_containers.scss
+++ b/web/styles/_containers.scss
@@ -137,15 +137,15 @@
 
 
 .body-container-small {
-  max-width: 470px;
+  max-width: 470px !important;
 }
 
 .body-container-med {
-  max-width: 750px;
+  max-width: 750px !important;
 }
 .body-container-lg {
-  max-width: 920px;
+  max-width: 920px !important;
 }
 .body-container-xl {
-  max-width: 1120px;
+  max-width: 1120px !important;
 }
