--- a/web/styles/abstract/_variables.scss
+++ b/web/styles/abstract/_variables.scss
@@ -223,3 +223,14 @@ $sq-global-navigation-background-color-dark: $sq-color-primary-darkest;
 
 // base config
 $base-font-size:  $t6-font-size;
+
+$accent-color-1-base:#f9c1bd; 
+$accent-color-1-top-color:#c31f10; 
+$accent-color-2-base:#a5f2d1; 
+$accent-color-2-top-color:#00844c; 
+$accent-color-3-base:#d5cff5; 
+$accent-color-3-top-color:#4230a8; 
+$accent-color-4-base:#ffdebc; 
+$accent-color-4-top-color:#b95c00; 
+$accent-color-5-base:#c9ffbc; 
+$accent-color-5-top-color:#00b916; 
